--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -137,7 +137,7 @@
 
 	</div>
 	<!----------------------------------------------------------Endreport---------------------------------------------------------->
-	<div id="endreport" class="fade in menu-box ">
+	<div id="endreport" class="fade in menu-box  popup">
 
 		<div class="row">
 
@@ -148,9 +148,8 @@
 		<div class="row">
 
 			<div class="col-md-12">
-				<h2>
-					<span class="label label-default"><span
-						id="winnerTotal">Du hast das Spiel nach 10 Runden gewonnen!</span></span>
+				<h2 class="winner-text">
+					Du hast das Spiel nach 10 Runden gewonnen!
 				</h2>
 			</div>
 		</div>
@@ -168,7 +167,7 @@
 		<div class="row">
 
 			<div class="col-md-12">
-				<button type="button" class="btn btn-danger center-button" onclick="finishGame()">
+				<button type="button" class="btn btn-danger center-button btn-block" onclick="finishGame()">
 					zurück zum Hauptmenü <span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
 				</button>
 			</div>
