--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -53,7 +53,7 @@
 						Schiffe kaufen <span class="glyphicon glyphicon-shopping-cart"
 							aria-hidden="true"></span>
 					</button>
-					<button type="button" class="btn btn-success" onclick="endRound()">
+					<button type="button" id="endRoundButton" class="btn btn-success" onclick="endRound()">
 						Runde Beenden<span class="glyphicon glyphicon-chevron-right"
 							aria-hidden="true"></span>
 					</button>
