--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -45,11 +45,11 @@
 					<button type="button" class="btn btn-default  disabled">
 						Guthaben <span id="credits" class="badge">4000 $</span>
 					</button>
-					<button type="button" class="btn btn-danger" onclick="openReport()">
+					<button type="button" class="btn btn-danger" id="openReportButton" onclick="openReport()">
 						Report <span class="glyphicon glyphicon-list-alt"
 							aria-hidden="true"></span>
 					</button>
-					<button type="button" class="btn btn-warning" onclick="openShop()">
+					<button type="button" class="btn btn-warning" id="openShopButton" onclick="openShop()">
 						Schiffe kaufen <span class="glyphicon glyphicon-shopping-cart"
 							aria-hidden="true"></span>
 					</button>
