--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -167,7 +167,7 @@
 		<div class="row">
 
 			<div class="col-md-12">
-				<button type="button" class="btn btn-danger center-button btn-block" onclick="finishGame()">
+				<button type="button" class="btn btn-danger btn-block" onclick="finishGame()">
 					zurück zum Hauptmenü <span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
 				</button>
 			</div>
