--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -148,7 +148,7 @@
 		<div class="row">
 
 			<div class="col-md-12">
-				<h2 class="winner-text">
+				<h2 id="winner-text">
 					Du hast das Spiel nach 10 Runden gewonnen!
 				</h2>
 			</div>
