--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -36,24 +36,24 @@
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<div class="navbar-form navbar-right">
-					<button type="button" class="btn btn-default disabled">
+					<button type="button" class="btn btn-default disabled disableButton">
 						Verfügbare Jäger <span id="fighter" class="badge">4</span>
 					</button>
-					<button type="button" class="btn btn-default disabled">
+					<button type="button" class="btn btn-default disabled disableButton">
 						Verfügbare Schlachtschiffe <span id="battlestar" class="badge">4</span>
 					</button>
-					<button type="button" class="btn btn-default  disabled">
+					<button type="button" class="btn btn-default  disabled disableButton">
 						Guthaben <span id="credits" class="badge">4000 $</span>
 					</button>
-					<button type="button" class="btn btn-danger" id="openReportButton" onclick="openReport()">
+					<button type="button" class="btn btn-danger" id="openReportButton disableButton" onclick="openReport()">
 						Report <span class="glyphicon glyphicon-list-alt"
 							aria-hidden="true"></span>
 					</button>
-					<button type="button" class="btn btn-warning" id="openShopButton" onclick="openShop()">
+					<button type="button" class="btn btn-warning" id="openShopButton disableButton" onclick="openShop()">
 						Schiffe kaufen <span class="glyphicon glyphicon-shopping-cart"
 							aria-hidden="true"></span>
 					</button>
-					<button type="button" id="endRoundButton" class="btn btn-success" onclick="endRound()">
+					<button type="button" id="endRoundButton" class="btn btn-success disableButton" onclick="endRound()">
 						Runde Beenden<span class="glyphicon glyphicon-chevron-right"
 							aria-hidden="true"></span>
 					</button>
