--- a/SpaceWars/WebContent/content/html/menuHighscore.html
+++ b/SpaceWars/WebContent/content/html/menuHighscore.html
@@ -59,15 +59,16 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12">
-				<table id="sorting-example" class="table table-hover">
+				<table id="highscore-table" class="table table-hover">
 					<thead>
 						<tr>
-							<th>Name</th>
-							<th data-dynatable-sorts="computerYear">Year</th>
-							<th>Computer Year</th>
+							<th>Datum</th>
+							<th>Sieger</th>
+							<th>Runden</th>
+							<th>Zerstörte Schiffe im Spiel</th>
 						</tr>
 					</thead>
-					<tbody>
+					<tbody id="highscoreContent">
 						<tr>
 							<td>Steve</td>
 							<td>Two Thousand and Thirteen</td>
