--- a/SpaceWars/WebContent/content/html/menuHighscore.html
+++ b/SpaceWars/WebContent/content/html/menuHighscore.html
@@ -61,7 +61,7 @@
 			<div class="col-md-12">
 				<table id="highscore-table" class="table table-hover">
 					<thead>
-						<tr>
+						<tr><th>Spiel Name</th>
 							<th>Datum</th>
 							<th>Sieger</th>
 							<th>Runden</th>
@@ -69,21 +69,7 @@
 						</tr>
 					</thead>
 					<tbody id="highscoreContent">
-						<tr>
-							<td>Steve</td>
-							<td>Two Thousand and Thirteen</td>
-							<td>2013</td>
-						</tr>
-						<tr>
-							<td>C</td>
-							<td>Two Thousand and Thirteen</td>
-							<td>2016</td>
-						</tr>
-						<tr>
-							<td>A</td>
-							<td>Two Thousand and Thirteen</td>
-							<td>2019</td>
-						</tr>
+						
 					</tbody>
 				</table>
 
