--- a/SpaceWars/WebContent/content/html/menuHighscore.html
+++ b/SpaceWars/WebContent/content/html/menuHighscore.html
@@ -62,7 +62,7 @@
 				<table id="highscore-table" class="table table-hover">
 					<thead>
 						<tr><th>Spiel Name</th>
-							<th>Datum</th>
+							<th  data-dynatable-sorts="dec">Datum</th>
 							<th>Sieger</th>
 							<th>Runden</th>
 							<th>Zerstörte Schiffe im Spiel</th>
