--- a/SpaceWars/WebContent/content/html/menuHighscore.html
+++ b/SpaceWars/WebContent/content/html/menuHighscore.html
@@ -53,7 +53,13 @@
 		<div class="row">
 
 			<div class="col-md-12">
-				<h2>Warten auf Gegener</h2>
+				<h2>Highscore Liste
+				
+				<button type="button" class="close" aria-label="Schließen"
+					onclick="openHighscore()">
+					<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
+				</button>
+				</h2>
 
 			</div>
 		</div>
@@ -61,15 +67,16 @@
 			<div class="col-md-12">
 				<table id="highscore-table" class="table table-hover">
 					<thead>
-						<tr><th>Spiel Name</th>
-							<th  data-dynatable-sorts="dec">Datum</th>
+						<tr>
+							<th>Spiel Name</th>
+							<th data-dynatable-sorts="dec">Datum</th>
 							<th>Sieger</th>
 							<th>Runden</th>
 							<th>Zerstörte Schiffe im Spiel</th>
 						</tr>
 					</thead>
 					<tbody id="highscoreContent">
-</tbody>
+					</tbody>
 				</table>
 
 
