--- a/SpaceWars/WebContent/content/html/menuMultiplayerJoin.html
+++ b/SpaceWars/WebContent/content/html/menuMultiplayerJoin.html
@@ -49,7 +49,7 @@
 				<h2>
 					Lobby
 					<button type="button" class="close" aria-label="Schließen"
-						onclick="openHighscore()">
+						onclick="joinGame()">
 						<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
 					</button>
 				</h2>
