--- a/SpaceWars/WebContent/content/html/menuMain.html
+++ b/SpaceWars/WebContent/content/html/menuMain.html
@@ -33,10 +33,11 @@
 				</button>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
-				<h3>
-					<span class="label label-default  navbar-right" id="username">Spielername
-						ist auf der Brücke</span>
-				</h3>
+				<div class="navbar-form navbar-right">
+					<button type="button" id="username"
+						class="btn btn-default btn-lg active" disabled="disabled"></button>
+				</div>
+
 			</div>
 			<!--/.navbar-collapse -->
 		</div>
