--- a/SpaceWars/WebContent/content/index.html
+++ b/SpaceWars/WebContent/content/index.html
@@ -22,7 +22,7 @@
 
 	<div class="container">
 		<form class="form-signin">
-			<h2 class="form-signin-heading">Willkommen Comander!</h2>
+			<h2 class="form-signin-heading">Willkommen Commander!</h2>
 			<label for="username" class="sr-only">Name</label> <input
 				id="username" class="form-control"
 				placeholder="Wie sollen wir Sie nennen?" required="" autofocus=""
