--- a/SpaceWars/WebContent/content/html/menuMain.html
+++ b/SpaceWars/WebContent/content/html/menuMain.html
@@ -60,7 +60,7 @@
 			<button class="btn btn-lg btn-primary btn-block corners"
 				type="button" onclick="openHighscore()">Highscore</button>
 			<button class="btn btn-lg btn-primary btn-block corners"
-				type="button" onclick="showSettings()">Einstellungen</button>
+				type="button" onclick="showManual()">Manual</button>
 			<button class="btn btn-lg btn-primary btn-block corners"
 				type="button" onclick="logout()">Spiel verlassen</button>
 
