--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -36,24 +36,30 @@
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<div class="navbar-form navbar-right">
-					<button type="button" class="btn btn-default disabled disableButton">
+					<button type="button"
+						class="btn btn-default disabled disableButton">
 						Verfügbare Jäger <span id="fighter" class="badge">4</span>
 					</button>
-					<button type="button" class="btn btn-default disabled disableButton">
+					<button type="button"
+						class="btn btn-default disabled disableButton">
 						Verfügbare Schlachtschiffe <span id="battlestar" class="badge">4</span>
 					</button>
-					<button type="button" class="btn btn-default  disabled disableButton">
+					<button type="button"
+						class="btn btn-default  disabled disableButton">
 						Guthaben <span id="credits" class="badge">4000 $</span>
 					</button>
-					<button type="button" class="btn btn-danger" id="openReportButton disableButton" onclick="openReport()">
+					<button type="button" class="btn btn-danger"
+						id="openReportButton disableButton" onclick="openReport()">
 						Report <span class="glyphicon glyphicon-list-alt"
 							aria-hidden="true"></span>
 					</button>
-					<button type="button" class="btn btn-warning" id="openShopButton disableButton" onclick="openShop()">
+					<button type="button" class="btn btn-warning"
+						id="openShopButton disableButton" onclick="openShop()">
 						Schiffe kaufen <span class="glyphicon glyphicon-shopping-cart"
 							aria-hidden="true"></span>
 					</button>
-					<button type="button" id="endRoundButton" class="btn btn-success disableButton" onclick="endRound()">
+					<button type="button" id="endRoundButton"
+						class="btn btn-success disableButton" onclick="endRound()">
 						Runde Beenden<span class="glyphicon glyphicon-chevron-right"
 							aria-hidden="true"></span>
 					</button>
@@ -84,23 +90,30 @@
 			</div>
 			<div class="col-md-8">
 				<h3>Schlachtschiff</h3>
-				<p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum
-					sociis natoque penatibus et magnis dis parturient montes, nascetur
-					ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-				<p>Cum sociis natoque penatibus et magnis dis parturient montes,
-					nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor
-					fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor
-					ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non
-					metus auctor fringilla.</p>
+				<p>
+					<strong>Schlachtschiffe sind die Speerspitze Ihres
+						Imperiums!</strong><br />Sie sind im Kampf die ersten die angreifen, die
+					ersten, die Ihrer Stellungen halten. Jägern sind sie in
+					Durchschlagskraft und Panzerung weit überlegen und darum Ihr
+					wichtigster Schutz.<br /> Schlachtschiffe sind eine Investition,
+					aber ihr Geld absolut Wert.
+				</p>
+				<p>
+					Nach gewonnenen Schlachten können Ihre Schlachtschiffe vom Rang des
+					Captains bis zum Admiral of Fleet aufsteigen. Ihre Siegchancen
+					steigern somit nach jeder gewonnen Schlacht.<br /> <em>Ränge:</em>
+					Captain, Vice Admiral, Admiral, Admiral of Fleet
+				</p>
+
 			</div>
 			<div class="btn-group center-button">
 				<button type="button" class="btn btn-default"
 					onclick="buyBattlestar()">
-					<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+					<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
 				</button>
 				<button type="button" class="btn btn-default"
 					onclick="notBuyBattlestar()">
-					<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+					<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
 				</button>
 			</div>
 
@@ -112,24 +125,31 @@
 			</div>
 			<div class="col-md-8">
 				<h3>Jäger</h3>
-				<p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum
-					sociis natoque penatibus et magnis dis parturient montes, nascetur
-					ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-				<p>Cum sociis natoque penatibus et magnis dis parturient montes,
-					nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor
-					fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor
-					ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non
-					metus auctor fringilla.</p>
+				<p>
+					<strong>Jäger bieten strategische Möglichkeiten, die Sie
+						nicht unterschätzen sollten!</strong><br /> Sie sind günstige Einheiten
+					und Ihre schnellste Chance auf Erhöhung Ihrer Steuereinnahmen. So
+					mancher Jäger hat zudem in der letzten Not den entscheidenden
+					Unterschied in einer Schlacht machen können und das ein oder andere
+					Schlachtschiff vom Himmel geholt.
+				</p>
+				<p>
+					Nach gewonnenen Schlachten können Ihre Jäger vom Rang des
+					Lieutenants bis zum Captain aufsteigen. Ihre Siegchancen steigern
+					somit nach jeder gewonnen Schlacht. <br /> <em>Ränge:</em>Lieutenant,
+					Lieutenant Commander, Commander, Captain
+				</p>
+
 			</div>
 
 
 			<div class="btn-group center-button">
 				<button type="button" class="btn btn-default" onclick="buyFighter()">
-					<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+					<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
 				</button>
 				<button type="button" class="btn btn-default"
 					onclick="notBuyFighter()">
-					<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+					<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
 				</button>
 			</div>
 
@@ -148,31 +168,26 @@
 		<div class="row">
 
 			<div class="col-md-12">
-				<h2 id="winner-text">
-					Du hast das Spiel nach 10 Runden gewonnen!
+				<h2 id="winner-text">Du hast das Spiel nach 10 Runden gewonnen!
 				</h2>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
-			
+			<div class="col-md-6"></div>
+			<div class="col-md-6"></div>
 
-			</div>
-			<div class="col-md-6">
-				
-				
-			</div>
-			
 		</div>
 		<div class="row">
 
 			<div class="col-md-12">
-				<button type="button" class="btn btn-danger btn-block" onclick="finishGame()">
-					zurück zum Hauptmenü <span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
+				<button type="button" class="btn btn-danger btn-block"
+					onclick="finishGame()">
+					zurück zum Hauptmenü <span
+						class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 				</button>
 			</div>
 		</div>
-		
+
 
 	</div>
 
@@ -456,10 +471,8 @@
 			<div id="noFight" class="row">
 
 				<div class="col-md-12">
-					<h2>
-						<hr>
-						Es hat kein Kampf stattgefunden!
-					</h2>
+					<hr>
+					<h2>Es hat kein Kampf stattgefunden!</h2>
 				</div>
 			</div>
 
