--- a/SpaceWars/WebContent/content/html/menuManual.html
+++ b/SpaceWars/WebContent/content/html/menuManual.html
@@ -64,27 +64,28 @@
 				<br /> SpaceWars ist ein Rundenbasiertes Onlinespiel, in dem es
 				darum geht alle Planeten des Universums in Ihre Gewalt zu bringen.
 				Im Spiel können Sie Schiffe kaufen und auf Planeten schicken.
-				Zerstören Sie die Schiffe Ihres Gegenspielers gehört das Schiff
-				Ihnen. <br> Als neuer Governor stehen Ihnen natürlich die
-				eingetriebenen Steuern des Planetens zu. Von dem Gewonnenen Geld
-				können Sie weitere Schiffe zu ihrer Flotte hinzufügen können.
+				Zerstören Sie die Schiffe Ihres Gegenspielers gehört der Planet
+				Ihnen.<br /> Als neuer Gouverneur stehen Ihnen natürlich die
+				eingetriebenen Steuern des Planeten zu Verfügung. Von dem Gewonnenen
+				Geld können Sie weitere Schiffe zu ihrer Flotte hinzufügen können.
 				<h4>Spielmodi...</h4>
 				<em>Einzelspieler:</em> Der Einzelspielermodus ist über den
 				Menüpunkt „Scharmützel“ zu erreichen. Hier kann zunächst die
 				Kartengröße gewählt werden. Entscheiden Sie sich zwischen drei, fünf
 				oder sieben Planeten. Nach dieser Einstellung geht es los… <br />
 				Sie kämpfen gegen den Computer. Ein kleiner Tipp: unterschätzen Sie
-				ihn niemals!<br /> <br /> <em>Mehrspieler:</em> Der
-				Mehrspielermodus gliedert sich in zwei Untermodi auf. Sie können mit
-				einem zweiten Commander gegen den Computer kämpfen, oder einen
-				anderen Commander herausfordern. In beiden Fällen muss einer von
-				Ihnen ein Spiel erstellen, der zweite Spieler kann diesem Spiel
-				beitreten. <br /> Um das Spiel zu erstellen wählen Sie zunächst die
-				Kartengröße und bestimmen anschießend zwischen Player vs. Player
-				oder Player - Player Vs Computer. <br /> Ihr Partner kann über
-				„Mehrspieler“ => „Spielbeitreten“ zur Lobby gelangen. Hier liegen
-				alle erstellten Spiele. Über den Spielnamen oder den Namen des
-				Erstellers kann er das Spiel finden und diesem beitreten. </br>
+				ihn niemals!<br />
+				<br /> <em>Mehrspieler:</em> Der Mehrspielermodus gliedert sich in
+				zwei Untermodi auf. Sie können mit einem zweiten Commander gegen den
+				Computer kämpfen, oder einen anderen Commander herausfordern. In
+				beiden Fällen muss einer von Ihnen ein Spiel erstellen, der zweite
+				Spieler kann diesem Spiel beitreten. <br /> Um das Spiel zu
+				erstellen wählen Sie zunächst die Kartengröße und bestimmen
+				anschießend zwischen Player vs. Player oder Player - Player Vs
+				Computer. <br /> Ihr Partner kann über „Mehrspieler“ =>
+				„Spielbeitreten“ zur Lobby gelangen. Hier liegen alle erstellten
+				Spiele. Über den Spielnamen oder den Namen des Erstellers kann er
+				das Spiel finden und diesem beitreten. </br>
 				<h4>Im Spiel...</h4>
 				Im Spiel gehen Sie zunächst in den Shop (Oranger Button im Menü
 				oben). Hier können Sie ihrem Konto entsprechend Schiffe kaufen. Es
@@ -93,7 +94,7 @@
 				entscheiden Sie also weise. Bedenken Sie auch, je mehr Schiffe (egal
 				welchem Typs) Sie auf einem Planeten halten, desto größer sind die
 				Steuereinnahmen. Maximal können Sie fünf Schiffe auf einem Planeten
-				stationieren. <br /> Nach dem Kauf, können Sie die Schiffe über die
+				stationieren.<br /> Nach dem Kauf, können Sie die Schiffe über die
 				„Plus-“ und „Minusbutton“ auf den Planeten verteilen. In der
 				Menüleiste können Sie erkennen, wie viele Schiffe noch nicht auf
 				Planeten verteilt wurden<br /> Ist Ihr Zug abgeschlossen beenden
@@ -108,12 +109,6 @@
 				auf welchen Planeten es zu Schlachten kam, welcher Spieler gesiegt
 				hat und wie viele Schiffe übriggeblieben sind. Sie erhalten zudem
 				eine Liste aller zerstörten Schiffe.
-
-
-
-
-
-
 
 			</div>
 		</div>
