--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -35,7 +35,13 @@
 				</button>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
-				<div class="navbar-form navbar-right">
+				
+				
+				<div class="navbar-form navbar-center">
+				<button type="button" class="btn btn-danger" onclick="finishGame()">
+					<span class ="glyphicon glyphicon-chevron-left" aria-hidden="true">
+					</span>Spiel beenden 
+				</button>
 					<button type="button"
 						class="btn btn-default disabled disableButton">
 						Verfügbare Jäger <span id="fighter" class="badge">4</span>
