--- a/SpaceWars/WebContent/content/html/menuMultiplayerJoin.html
+++ b/SpaceWars/WebContent/content/html/menuMultiplayerJoin.html
@@ -33,10 +33,13 @@
 				</button>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
-				<h3>
-					<span class="label  navbar-right" id="username">Spielername
-						ist auf der Brücke</span>
-				</h3>
+<div class="navbar-form navbar-right">
+					<button type="button" id="backButton" class="btn btn-success"
+						onclick="backToMenu()">
+						zurück zum Hauptmenü <span
+							class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+					</button>
+				</div>
 			</div>
 			<!--/.navbar-collapse -->
 		</div>
