--- a/SpaceWars/WebContent/content/html/menuTeam.html
+++ b/SpaceWars/WebContent/content/html/menuTeam.html
@@ -51,7 +51,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6">
-				<button type="button" class="btn-block btn-transparent" onclick="chooseRace('wraith')">
+				<button type="button" class="btn-block btn-transparent" onclick="startPPVPC()">
 					<img src="../resources/images/Icon/HvsC.png" alt="..."
 						class="img-thumbnail" >
 				<h2>Ihr gegen den Computer</h2>
