--- a/SpaceWars/WebContent/content/html/menuMain.html
+++ b/SpaceWars/WebContent/content/html/menuMain.html
@@ -52,10 +52,10 @@
 				class="btn btn-lg btn-primary btn-block dropdown-toggle corners"
 				data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mehrspieler</button>
 			<ul class="btn btn-lg btn-block dropdown-menu btn-transparent">
-				<li><button class="btn btn-lg btn-primary btn-block corners"
-						type="button" onclick="openCreateGame()">Spiel erstellen</button></li>
-				<li><button class="btn btn-lg btn-primary btn-block corners"
-						type="button" onclick="joinGame()">Spiel beitreten</button></li>
+				<li><div><button class="btn btn-lg btn-primary btn-block corners"
+						type="button" onclick="openCreateGame()">Spiel erstellen</button></div></li>
+				<li><div><button class="btn btn-lg btn-primary btn-block corners"
+						type="button" onclick="joinGame()">Spiel beitreten</button></div></li>
 			</ul>
 			<button class="btn btn-lg btn-primary btn-block corners"
 				type="button" onclick="openHighscore()">Highscore</button>
