--- a/SpaceWars/WebContent/content/index.html
+++ b/SpaceWars/WebContent/content/index.html
@@ -24,11 +24,11 @@
 		<form class="form-signin">
 			<h2 class="form-signin-heading">Willkommen Commander!</h2>
 			<label for="username" class="sr-only">Name</label> <input
-				id="username" class="form-control"
+				id="username" class="form-control InputTextBox"
 				placeholder="Wie sollen wir Sie nennen?" required="" autofocus=""
 				type="input" >
 
-			<button class="btn btn-lg btn-primary btn-block" type="button"
+			<button class="btn btn-lg btn-primary btn-block submitButton" type="button"
 				onclick="submitUser()">Spiel starten</button>
 		</form>
 
