--- a/SpaceWars/WebContent/content/html/menuMultiplayerCreate.html
+++ b/SpaceWars/WebContent/content/html/menuMultiplayerCreate.html
@@ -47,11 +47,11 @@
 		<form class="form-signin">
 			<h2 class="form-signin-heading">Spiel anlegen</h2>
 			<label for="username" class="sr-only">Name</label> <input
-				id="gameName" class="form-control"
+				id="gameName" class="form-control InputTextBox"
 				placeholder="Wie soll Ihr Spiel heißen?" required="" autofocus=""
 				type="input"> 
 
-			<button class="btn btn-lg btn-primary btn-block" type="button" onclick="createGame()">Spiel
+			<button class="btn btn-lg btn-primary btn-block submitButton" type="button" onclick="createGame()">Spiel
 				starten</button>
 		</form>
 
