--- a/SpaceWars/WebContent/content/index.html
+++ b/SpaceWars/WebContent/content/index.html
@@ -39,7 +39,7 @@
 		$(document).ready(function(){
 		    $('#username').keypress(function(e){
 		        if(e.keyCode==13){
-		        	$('#sendUname').click(function{
+		        	$('#sendUname').click(function(){
 		        		submitUser();
 		        	});
 		        }
