--- a/SpaceWars/WebContent/content/index.html
+++ b/SpaceWars/WebContent/content/index.html
@@ -25,7 +25,7 @@
 			<h2 class="form-signin-heading">Willkommen Commander!</h2>
 			<label for="username" class="sr-only">Name</label> <input
 				id="username" class="form-control InputTextBox"
-				placeholder="Wie sollen wir Sie nennen?" required="" autofocus=""
+				placeholder="Wie sollen wir Sie nennen?" required="required" autofocus=""
 				type="input">
 
 			<button id="sendUname"
